Remove remove function and add allPostRefreshArticleList

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <h1 class="logo">my blog</h1>
                 <main class="wrapper">
                     <aside class="sidebar">
-                    <h2 class="section-title"><a href="#All-posts">All posts</a></h2>
+                    <h2 class="section-title"><a href="#all-posts" id="all-posts">All posts</a></h2>
                     <ul class="list titles">
                     </ul>
                     </aside>
