--- a/index.html
+++ b/index.html
@@ -171,6 +171,22 @@
             <script id="template-article-link" type="text/x-handlebars-template">
               <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
             </script>
+            <script id="template-tag-link" type="text/x-handlebars-template">
+              <li><a href="#tag-{{ id }}">{{ title }}</a></li>
+            </script>
+            <script id="template-author-link" type="text/x-handlebars-template">
+              <a href="#author-{{ id }}">{{ title }}</a>
+            </script>
+            <script id="template-tag-cloud-link" type="text/x-handlebars-template">
+              {{#each tags}}
+              <li><a href="#tag-{{ tag }}" class="tag-size-{{ className }}">{{ tag }} </a></li>
+              {{/each}}
+            </script>
+            <script id="template-author-cloud-link" type="text/x-handlebars-template">
+              {{#each authors}}
+              <li><a href="#author-{{ author }}" class="tag-size-{{ className }}">{{ author }} </a></li>
+              {{/each}}
+            </script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>\
             <script src="js/script.js"></script>
     </body>
